--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="ferretería, empresas, herramientas, materiales, Cuscatlán, construcción, seguridad">
   <meta property="og:title" content="Ferretería Cuscatlán Empresas">
   <meta property="og:description" content="Expertos en soluciones industriales, materiales y herramientas de primera para empresas.">
-  <meta property="og:url" content="https://cuscatlanempresaszazessv.shop/">
+  <meta property="og:url" content="https://bienvenidlafisecr.vercel.app/">
   <meta property="og:type" content="website">
   <link rel="stylesheet" href="css/styles.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
@@ -131,7 +131,7 @@
         <li><i class="fas fa-map-marker-alt"></i> San Salvador - Calle Rubén Darío #145</li>
         <li><i class="fas fa-map-marker-alt"></i> Santa Ana - Blvd. Constitución #98</li>
         <li><i class="fas fa-map-marker-alt"></i> San Miguel - Av. Roosevelt Sur #33</li>
-        <li><i class="fas fa-envelope"></i> info@cuscatlanempresaszazessv.shop</li>
+        <li><i class="fas fa-envelope"></i> info@bienvenidlafisecr.vercel.app</li>
         <li><i class="fas fa-clock"></i> Lunes a Viernes: 8am - 6pm</li>
       </ul>
       <div class="social-icons">
@@ -167,7 +167,7 @@
   <footer class="main-footer">
     <div class="container">
       <p>&copy; 2025 Ferretería Cuscatlán Empresas. Todos los derechos reservados.</p>
-      <a href="https://cuscatlanempresaszazessv.shop/">FERRETERIA CUSCATLAN EMPRESAS EL SALVADOR </a>
+      <a href="https://bienvenidlafisecr.vercel.app/">FERRETERIA CUSCATLAN EMPRESAS EL SALVADOR </a>
     </div>
   </footer>
 
